[package]
name = "nedoraft"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "key_value"
path = "src/key_value.rs"

[[bin]]
name = "test_client"
path = "src/test_client.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
